[package]
name = "test_must_not_have_example"
version = "0.2.0"
edition = "2024"
publish = false
description = "Dylint lint forbidding example sections in test documentation"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dylint-driver = [
    "dep:common",
    "dep:dylint_linting",
    "dep:log",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_span",
    "dep:serde",
    "dep:whitaker"
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
dylint_linting = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
common = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = { workspace = true, optional = true }
whitaker = { version = "0.2.0", path = "../../", features = ["dylint-driver"], optional = true }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
dylint_testing = { workspace = true }
camino = { workspace = true }
