[package]
name = "whitaker_clones_core"
version = "0.2.7"
edition = "2024"
publish = false
description = "Token and AST clone-detection primitives for Whitaker"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = ["parser"]
parser = ["dep:ra_ap_syntax"]
[dependencies]
thiserror = { workspace = true }
rustc_lexer = { workspace = true }
ra_ap_syntax = { workspace = true, optional = true }
sha2 = { workspace = true }
tracing = { workspace = true }
whitaker_sarif = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[build-dependencies]
toml = { workspace = true }
[lints]
workspace = true
