[package]
name = "whitaker_sarif"
version = "0.2.4"
edition = "2024"
publish = false
description = "SARIF 2.1.0 models, builders, and merge logic for Whitaker clone detection"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
test-support = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = { workspace = true }

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
